# plot_search

./: .gitignore  README.md  analysis.ipynb  database.py  docker-compose.yml  download_otp_data.sh  generate_and_run_notebook.py  geocode_parcels.py  import_spatial_data.py  main.py  map_webapp.html  notified_plots.json  parse_listings.py  pyproject.toml  schema.py  scrape_otodom.py  scratch_analysis.py  telegram_bot.py  test_kiut.py  test_spatial.py
flows/: geocoder.py  kiut.py  parser.py  router.py  scorer.py  scraper.py  spatial.py  spatial_queries.py
scratch/: migrate.py  patch_spatial_queries.py  runner.py  test_modes.py  test_otp.py
skills/: architectural_setup.md  project_description.md  step1_ingestion.md  step2_geocoding.md  step3_spatial_filtering.md  step4_routing.md
