[project]
name = "plot-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "shapely>=2.0.7",
    "pyproj>=3.7.1",
    "tenacity>=9.0.0",
    "prefect>=3.7.5",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
]
