[project]
name = "plot-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "shapely>=2.0.7",
    "pyproj>=3.7.1",
    "tenacity>=9.0.0",
    "prefect>=3.7.5",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
    "geoalchemy2>=0.14.3",
    "pyshp>=3.1.4",
    "geopandas>=1.0.0",
    "pyogrio>=0.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
    "python-telegram-bot>=22.8",
    "python-dotenv>=1.2.2",
]
